# Maktos

./: .env.example  .gitignore  .railwayignore  AGENTS.md  AUDIT_REPORT.md  ENGINE_STATE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.opencode/: opencode.json
deploy/: AGENT_INSTRUCTIONS.md  DEPLOYMENT_PLAYBOOK.md  Dockerfile  Dockerfile.test  OPERATIONAL_MANUAL.md  TOOL_SWAP_GUIDE.md  apply_migrations.py  apply_postgres_schema.py  approve_maxasp_staging_campaign.py  check_maxasp_execution_readiness.py  dev_runner.sh  docker-compose.yml  enrich_maxasp_staging_accounts.py  generate_daily_summary.py  generate_maxasp_staging_review.py  import_maxasp_pilot_targets.py  import_n8n_workflows.py  railway.json  run_maxasp_staging_compliance.py  simulate_campaign.py  verify_strategy_bundle_persistence.py
docker/: Dockerfile.test  init.sql  test_integration.sh
docs/: ARCHITECTURE.md  AUTONOMY_POLICY.md  COMPLIANCE_RULES.md  CURRENT_STATE.md  DATA_MODEL.md  DECISIONS.md  FULL_CYCLE_ROADMAP.md  INTEGRATION_MAP.md  LIVE_DEPLOYMENT.md  MCP_AND_TOOL_SETUP.md  PROJECT_CONTEXT.md  ROADMAP.md  STAGING_SMOKE_TEST.md  STRATEGIST_BUNDLE.md  STRATEGIST_REVIEW_PACKAGE.md  TRACEABILITY_MATRIX.md
strategy/: README.md
tests/: test_approval_persistence.py  test_bundle_importer.py  test_bundle_persistence.py  test_bundle_validator.py  test_campaign_readiness.py  test_compliance.py  test_enrichment_pipeline.py  test_experiments.py  test_governance.py  test_integration.py  test_message_persistence_api.py  test_reply_classifier.py  test_scoring.py
(+81 files in other folders)
