[project]
name = "campaignops-kernel"
version = "0.1.0"
description = "CampaignOps Kernel v1 — governed campaign operations engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "httpx>=0.25.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
PYTHONPATH = "."

[tool.ruff]
target-version = "py311"
line-length = 100
